# huemon

./: .gitignore  .gitlint  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml  test.yml
assets/: huemon.service
assets/docker/: entrypoint.sh
assets/release/: release-all.sh  release-docker.sh  update-versions.sh
assets/systemd/: huemon.service  service-installer.sh
docker/: entrypoint.sh
src/: MANIFEST.in  config.example.py  config.example.yml  config_factory.py  discovery_interface.py  hue_command_interface.py  logger_factory.py  mypy.ini  noxfile.py  pylintrc  requirements.txt  setup.py  zabbix-hue.py
src/api/: api.py  cached_api.py
src/commands_available/: discover_command.py  light_command.py  sensor_command.py  system_command.py
src/discoveries_available/: batteries_discovery.py  lights_discovery.py  sensors_discovery.py
src/hue_mon/: __main__.py  api_interface.py  config_factory.py  discovery_interface.py  hue_command_interface.py  logger_factory.py  plugin_loader.py
src/hue_mon/api/: api.py  cached_api.py
src/huemon/: __main__.py  api_interface.py  api_server.py  config.example.yml  config_factory.py  const.py  discovery_interface.py  hue_command_interface.py  logger_factory.py  plugin_loader.py  server.py  util.py
src/huemon/api/: api.py  api_factory.py  api_interface.py  cached_api.py
src/huemon/commands/: command_handler.py  hue_command_interface.py
src/huemon/commands/internal/: agent_command.py  discover_command.py  light_command.py  sensor_command.py  system_command.py
src/huemon/commands_available/: discover_command.py  light_command.py  sensor_command.py  system_command.py
src/huemon/commands_internal/: agent_command.py  install_available_command.py
src/huemon/discoveries/: discovery_interface.py
src/huemon/discoveries/internal/: batteries_discovery.py  lights_discovery.py  sensors_discovery.py
src/huemon/discoveries_available/: batteries_discovery.py  lights_discovery.py  sensors_discovery.py
src/huemon/infrastructure/: bootstrapper.py  config_factory.py  logger_factory.py  plugin_loader.py  urllib_safe_opener.py
src/huemon/processors/: processor_interface.py  stdout_processor.py
src/huemon/sinks/: sink_interface.py  stdout_sink.py
src/huemon/utils/: assertions.py  caching.py  common.py  const.py  errors.py  paths.py  plugins.py  threading.py  util.py
src/huemon/utils/monads/: either.py  maybe.py  monad.py
src/tests/: fixtures.py  test_api.py  test_api_configuration.py  test_command_handler.py  test_light_command.py  test_monad_either.py  test_monad_maybe.py  test_sensor_command.py  test_system_command.py
zabbix/: hue.conf  hue_template.yaml
