[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
authors = ["Ely Deckers"]
classifiers = [
    "Environment :: Console",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
]
description = "Monitor your Philips Hue network"
documentation = "https://github.com/edeckers/huemon"
homepage = ""
include = [
    "LICENSE",
]
keywords = [
    "Hue",
    "Monitoring",
    "Zabbix",
    "Zigbee",
]
license = "MPL-2.0"
maintainers = ["Ely Deckers"]
name = "huemon"
readme = "README.md"
repository = "https://github.com/edeckers/huemon.git"
version = "0.6.0"

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^6.0"
mypy = "^0.931"
types-PyYAML = "^6.0.4"
nox = "^2022.1.7"
coverage = {extras = ["toml"], version = "^6.3.2"}
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]
bandit = "^1.7"
pre-commit = "^2.17"
pre-commit-hooks = "^4.1"
pytest = "^7"
pytest-cov = "^3"

#########################################################################################
# Testing
#########################################################################################
nox = "^2022.1.7"
python-semantic-release = "^7.25.2"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.report]
show_missing = true
fail_under = 85

[tool.coverage.html]
directory = "reports/coverage/html"

[tool.coverage.xml]
output = "reports/coverage/coverage.xml"

#########################################################################################
# Style checking
#########################################################################################

[tool.bandit]

[tool.black]
target-version = ["py38", "py39"]

[tool.isort]
profile = "black"

#########################################################################################
# Publishing
#########################################################################################

[tool.semantic_release]
branch = "develop"
build_command = "poetry build"
commit_subject = "chore: release {version}"
changelog_file = "README.md"
changelog_placeholder = "DISABLE_CHANGELOG_HACK"
major_on_zero = false
version_toml = "pyproject.toml:tool.poetry.version"
upload_to_repository = true
